--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,6 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #2E2F42;
-    margin-left: 0x;
     margin-right: 76px;
 }
 .accent {
@@ -97,10 +96,11 @@ margin-right: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--secondary-tex-color);
-    margin-right: 40px;
-    
-    
 }
+.contact-iten:not(:last-child){
+  margin-right: 40px;
+}
+
 .contact-mail:hover,
 .contact-mail:focus {
     color: var(--accent-color);
@@ -115,15 +115,20 @@ margin-right: 40px;
 .hero {
     background-color:#2E2F42;
     text-align: center;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 .hero-title {
+    max-width:500px;
+    margin-left: auto;
+    margin-right: auto;
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
     color: #FFFFFF;
-    padding-top: 188px;
+    
 }
 .hero-button {
     min-width: 169px;
@@ -140,7 +145,7 @@ margin-right: 40px;
     background-color: #4D5AE5;
     cursor: pointer ;
     margin-top: 48px;
-    margin-bottom: 188px;
+    
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -159,7 +164,12 @@ margin-right: 40px;
       clip-path: inset(50%);
     margin: -1px;
   }
-
+  .attribute {
+    padding-top: 120px;
+  }
+  .attribute-iten {
+      flex-basis: calc((100% - 3*24px)/3); 
+  }
   .attribute-list {
     display: flex;
     gap: 24px;
@@ -170,7 +180,6 @@ margin-right: 40px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--primery-text-color);
-    padding-top: 32px;
     margin-bottom: 8px;  
   }
   .description {
@@ -204,8 +213,7 @@ margin-right: 40px;
     background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
-
-    
+    padding: 32px;
   }
   .title-project-team {
     font-weight: 700;
@@ -217,16 +225,17 @@ margin-right: 40px;
     color: var(--primery-text-color);
     margin-bottom: 72px;
   }
-  .section-projects {
-    padding-top: 0px;
+  .projects {
+    padding-top: 96px;
+    padding-bottom: 120px;
   }
+  
   .filter-buttons {
     
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 96px;
     margin-bottom: 72px;
     
   }
@@ -241,6 +250,10 @@ margin-right: 40px;
     cursor: pointer;
     border-radius: 4px;
     margin-right: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     border: 1px solid #E7E9FC;
   }
   
@@ -251,7 +264,10 @@ margin-right: 40px;
   }
   .project-classification {
     background: #FFFFFF;
-    border-bottom: 1px solid #E7E9FC;
+    border: 1px solid #E7E9FC;
+    border-top-style: none;
+    padding: 32px;
+    padding-left: 0;
     
   }
   .project-classification-text {
@@ -262,24 +278,20 @@ margin-right: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--secondary-tex-color);
-    margin-bottom: 32px;
+    
   }
   /* ============================FOOTER========================= */
   .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: #2E2F42;
   }
   .logo-footer {
     color: #F4F4FD;
   }
-  .logo-footer-text {
-    padding-top: 100px;
-    padding-left: 0px;
-    margin-bottom: 16px;
-  }
+  
   .footer-descriptions {
     width: 264px;
-    padding-left: 0px;
-    padding-bottom: 100px;
+    margin-top: 16px;
     color: #E7E9FC;
-    
   }
